--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
-pandas==1.4.2
-streamlit==1.10.0
+geopandas
+streamlit
+streamlit-folium
+geopy
+pandas
 plotly
+matplotlib
+shapely
+xarray
+pydeck
+numpy
+folium
+pygeos
+rtree
+rasterio
+s3fs
